--- a/app.html
+++ b/app.html
@@ -33,14 +33,14 @@
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label for="supabaseUrl" class="form-label">Supabase URL</label>
-                                    <input type="text" class="form-control" id="supabaseUrl" 
+                                    <input type="hidden" class="form-control" id="supabaseUrl" 
                                            value="https://wiitoudcpireeauebzja.supabase.co">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label for="supabaseKey" class="form-label">Supabase Anon Key</label>
-                                    <input type="password" class="form-control" id="supabaseKey" 
+                                    <input type="hidden" class="form-control" id="supabaseKey" 
                                            value="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndpaXRvdWRjcGlyZWVhdWViemphIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ1MDk4ODgsImV4cCI6MjA3MDA4NTg4OH0.6-TlcKm9RyaBleNioSHLpkkmusRViYq3RG8e6V1uLro">
                                 </div>
                             </div>
